[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["devin <saini.devin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "^1.0.0"
tensorflow = "^2.14.0"
matplotlib = "^3.8.1"
pandas = "^2.1.2"
scikit-learn = "^1.3.2"
tensorflow-decision-forests = "^1.7.0"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
